Gap fix 2

--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	padding: 0.8rem;
-	border: 1px solid #ccccccaa;
+	border: 2px solid #cccccc9a;
 	margin: 1rem 0;
 }
 
